# rose

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile.web  LICENCE  README.md  docker-compose.yml
.github/workflows/: ci.yml
doc/: card-index.md
docker/: Dockerfile.graph  Dockerfile.web  graph-entrypoint.sh  web-entrypoint.sh
include/: common.h  common.hpp  graph.hpp  moves.h  moves.hpp  ranking.hpp  serialise.hpp  table.h  table.hpp
src/: fuzz.cpp  graph.cpp  main.cpp  moves.cpp  ranking.cpp  serialise.cpp  table.cpp
tests/: CMakeLists.txt  res_config.hpp.in  test_common.cpp  test_graph.cpp  test_main.cpp  test_moves.cpp  test_serialise.cpp  test_table.cpp
tests/res/: random-deck.txt
web/: CMakeLists.txt  README.md  app.mjs  biome.json  graph.json  index.html  package-lock.json  package.json  script.js  style.css  webpack.config.js
